changed chnk data to 250

--- a/chunk_data.ipynb
+++ b/chunk_data.ipynb
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 24,
    "metadata": {
     "scrolled": true
    },
@@ -387,7 +387,7 @@
    "source": [
     "\n",
     "############################################################################################################################\n",
-    "chunk_length=400;\n",
+    "# chunk_length=400;\n",
     "\n",
     "path = r\"D:\\292d\\letters\"#r\"C:\\Users\\kathe\\Documents\\GitHub\\tensorflow\\tensorflow\\lite\\micro\\examples\\magic_wand\\train\\letters\"\n",
     "write_path = r\"D:\\292d\\data\"#r\"C:\\Users\\kathe\\Documents\\GitHub\\tensorflow\\tensorflow\\lite\\micro\\examples\\magic_wand\\train\\data\"\n",
@@ -407,11 +407,49 @@
     "#             press_inds = np.argwhere(recording[:,0]==1).squeeze()\n",
     "#             chunk = zp_data(recordings, chunk_length)\n",
     "            \n",
-    "            NUM_SAMPLES_PER_CHUNK = 400\n",
+    "            NUM_SAMPLES_PER_CHUNK = 250\n",
     "            NUM_MEASUREMENTS_PER_SAMPLE = 3\n",
-    "            NUM_CHUNKS_PER_RECORDING = 5\n",
+    "            NUM_CHUNKS_PER_RECORDING = 50\n",
     "            chunks = chunk_data(recordings, NUM_SAMPLES_PER_CHUNK, NUM_MEASUREMENTS_PER_SAMPLE, NUM_CHUNKS_PER_RECORDING)\n",
     "            letter_list.append(chunks)\n",
+    "        np_to_txt(letter_list, fileWrite)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "###########OUTPUT for annie\n",
+    "\n",
+    "\n",
+    "############################################################################################################################\n",
+    "# chunk_length=400;\n",
+    "\n",
+    "path = r\"D:\\292d\\letters\"#r\"C:\\Users\\kathe\\Documents\\GitHub\\tensorflow\\tensorflow\\lite\\micro\\examples\\magic_wand\\train\\letters\"\n",
+    "write_path = r\"D:\\292d\\data\"#r\"C:\\Users\\kathe\\Documents\\GitHub\\tensorflow\\tensorflow\\lite\\micro\\examples\\magic_wand\\train\\data\"\n",
+    "names=[\"katherine\",\"chris\",\"annie\", \"lauren\",\"hallie\"]\n",
+    "letters=[\"A\",\"B\",\"C\",\"D\",\"E\",\"F\",\"G\",\"H\",\"I\",\"J\",\"K\",\"L\",\"M\",\"N\",\"O\",\"P\",\"Q\",\"R\",\"S\",\"T\",\"U\",\"V\",\"W\",\"X\",\"Y\",\"Z\",\n",
+    "          \"apostrophe\",\"backspace\",\"comma\",\"done\",\"exclamation_point\", \"period\",\"question_mark\",\"quotes\",\"slash\",\"space\",\"negative\"]\n",
+    "# letters=[\"A\"]\n",
+    "for l in letters: \n",
+    "    for n in names:\n",
+    "        letter_list =[]\n",
+    "        fileWrite =write_path+'\\\\'+l+'\\output_'+l+'_'+n+'.txt'  \n",
+    "        open(fileWrite, 'w').close()\n",
+    "        print('Writing: '+l+'_'+n+'.txt') \n",
+    "        for file in glob.glob(path+'\\\\'+l+'\\\\'+l+'_'+n +'_'+'*.csv'):\n",
+    "            ##for all lauren's As, write -,-,-  write list of arrays to .txt file (output_A_lauren)\n",
+    "            recordings = csv_to_np([file])\n",
+    "            press_inds = np.argwhere(recording[:,0]==1).squeeze()\n",
+    "            chunk = zp_data(recordings, chunk_length)\n",
+    "            \n",
+    "#             NUM_SAMPLES_PER_CHUNK = 250\n",
+    "#             NUM_MEASUREMENTS_PER_SAMPLE = 3\n",
+    "#             NUM_CHUNKS_PER_RECORDING = 50\n",
+    "#             chunks = chunk_data(recordings, NUM_SAMPLES_PER_CHUNK, NUM_MEASUREMENTS_PER_SAMPLE, NUM_CHUNKS_PER_RECORDING)\n",
+    "#             letter_list.append(chunks)\n",
     "        np_to_txt(letter_list, fileWrite)"
    ]
   },
